fixed position of continue shopping button on mobile

--- a/themes/the-dream-bed/css/shop.css
+++ b/themes/the-dream-bed/css/shop.css
@@ -551,7 +551,13 @@ a.continue.shopping {
 
 
 
+@media only screen and (max-width : 768px) {
 
+a.continue.shopping {
+    margin-top: 0;
+    position: relative;
+    display: block;
+    padding-bottom: 30px;
+}
 
-
-
+}
